@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 21-Dec-2011 Christophe Demko
  + Missing an hathor view in [#27414]
+ # [#27273] Sorting broken in com_contact single category view (Denise McLaurin)
 
 -------------------- 2.5.0 Beta1 Release [22-Dec-2011] ------------------
 
